:thought_balloon: styling

--- a/src/templates/shared/_header.ejs
+++ b/src/templates/shared/_header.ejs
@@ -24,7 +24,7 @@
     <meta name="description" content="<%= description %>">
     <title><%= title %></title>
     <link rel="canonical" href="<%= url %>">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png">
     <meta property="og:title" content="<%= ogTitle %>">
