--- a/src/styles/foundation/color.css
+++ b/src/styles/foundation/color.css
@@ -1,19 +1,20 @@
 :root {
-  --color-lime-light: #f4ff81;
-  --color-lime      : #4caf50;
-  --color-lime-dark : #1b5e20;
+  --color-white: #fff;
+  --color-blue-grey: #607d8b;
+  --color-orange: #ff6600;
+  --color-green: #008738;
+  --color-red: #fe0000;
 }
 
 body {
-  color: var(--color-lime-dark);
-  background-color: var(--color-lime-light);
+  color: var(--color-blue-grey);
 }
 
 a {
-  color: var(--color-lime-dark);
+  color: var(--color-blue-grey);
 }
 
 ::selection {
-  color: var(--color-lime-light);
-  background-color: var(--color-lime);
+  color: var(--color-white);
+  background-color: var(--color-blue-grey);
 }
